Fix line height problem. On small screens when sentences wrap, line height prevents proper spacings between lines.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,6 @@
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-color: #fff;
-  line-height: 1.5em;
 }
 
 img {
@@ -54,6 +53,9 @@ h6 {
 }
 p {
   margin-bottom: 1.5em;
+}
+p, li {
+  line-height: 1.5em;
 }
 
 .border-circle {
